--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "normalize.css": "^8.0.1",
     "path-browserify": "^1.0.1",
+    "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
     "prettier": "^2.8.4",
+    "screenfull": "^6.0.2",
     "unplugin-element-plus": "^0.7.0",
     "unplugin-vue-define-options": "^1.2.4",
     "vue": "^3.2.45",
