--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.config.js"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "element-plus": "^2.2.36",
     "eslint-plugin-prettier": "^4.2.1",
@@ -22,7 +23,6 @@
     "prettier": "^2.8.4",
     "screenfull": "^6.0.2",
     "unplugin-element-plus": "^0.7.0",
-    "unplugin-vue-define-options": "^1.2.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -38,6 +38,7 @@
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
+    "unplugin-vue-define-options": "^1.2.4",
     "vite": "^4.1.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.0.24"
