--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "axios": "^1.3.4",
+    "css-color-function": "^1.3.3",
     "element-plus": "^2.2.36",
     "eslint-plugin-prettier": "^4.2.1",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.33",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.0",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-vue": "^4.0.0",
